--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular-devkit/core": "0.8.1",
     "@angular/cli": "^7.1.0",
     "@angular/compiler-cli": "7.1.0",
